# cardvault

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/cardvault/: config.py  database.py  main.py  models.py
src/cardvault/routers/: cards.py  prices.py
src/cardvault/services/: ebay_scraper.py
src/cardvault/templates/: base.html  index.html
src/cardvault/templates/partials/: card_edit_row.html  card_list.html  card_row.html  price_history.html
tests/: conftest.py  test_cards.py  test_config.py  test_models.py  test_prices.py
